# rust_chess_workshop

./: Cargo.toml  INTRO.md  README.md  TEORI.md  rustfmt.toml
doc/: agenda.md  installasjon.md  intro.md  sb1u.md  teori.md  workshop.md
doc/teori/: 1-borrow-checker.md  1-muterbarhet.md  1-syntaks.md  2-borrow-checker.md  2-muterbarhet.md  3-option-og-result.md  4-match.md  5-struct-og-trait.md  6-vektor-og-iterator.md  7-hashset-og-hashmap.md  8-clone-og-copy.md
games/: README.md  can_castle.txt  castle_blocked_by_bishop.txt  castling.txt  checked_king.txt  game1.txt  no_castle_with_moved_rook.txt  no_castle_with_threatened_square.txt  run_games.md  scholars_mate.txt
src/: assertions.rs  board.rs  board_trait.rs  chess_board.rs  color.rs  enums.rs  game.rs  gui.rs  i18n.rs  main.rs  piece.rs  pieces.rs  pieces_trait.rs  square.rs  squares.rs  teori.md  test_runner.rs  utils.rs
src/finished_game/: board.rs  board_contract.rs  color.rs  game.rs  game_state.rs  mod.rs  piece.rs
src/finished_game_gui/: board_extended.rs  game.rs  mod.rs
src/finished_game_network/: README.md  board.rs  game.rs  mod.rs
src/piece/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
src/task_0/: board.rs  game.rs  hint.md  mod.rs  oppgave.md  oppgave_0.md
src/task_1/: HINT.md  board.rs  game.rs  hint.md  mod.rs  oppgave.md  oppgave_1.md  piece.rs
src/task_10/: README.md  board.rs  bonusoppgaver.md  hint.md  mod.rs  oppgave.md  oppgave_10.md
src/task_11/: board.rs  hint.md  mod.rs  oppgave.md
src/task_12/: board.rs  hint.md  mod.rs  oppgave.md
src/task_13/: hint.md  (+3 more)
(+97 files in other folders)
